# Teammates-and-social-auth

./: .env.sample  README.md  pyproject.toml
.github/workflows/: ci.yml
core/: containers.py  exceptions.py  serializers.py  settings.py  urls.py
oauth/: dto.py  exceptions.py  interfaces.py  provider.py  repositories.py  serializers.py  services.py  urls.py  views.py
persons/: dto.py  interfaces.py  models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  views.py
teams/: dto.py  interfaces.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
